# translation-bot

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  bot.py  compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
lib/: __init__.py  client.py  cog.py  db.py  l10n.toml  locale.py  localization.py  setting.py  setting_model.py  string_pair.py  type.py
scripts/: start.sh
