[project]
name = "translation-bot"
version = "0.1.0"
description = "translation bot for discord using DeepL."
authors = [{ name = "hawk-tomy", email = "me@mail.hawk-tomy.dev" }]
requires-python = "==3.12.*"
dependencies = [
    "discord.py>=2.5",
    "asqlite@git+https://github.com/Rapptz/asqlite.git@master",
    # .
]
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pyright>=1.1.361",
    "mypy>=1.10.0",
    "ruff>=0.4.3",
    #.
]

[tool.uv]
package = false
python-preference = "only-system"

[tool.pyright]
typeCheckingMode = "strict"

reportGeneralTypeIssues = "warning"

reportImportCycles = "none"

useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true

reportFunctionMemberAccess = false
reportIncompatibleMethodOverride = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnnecessaryIsInstance = false

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.mypy]
files = "**/*.py,**/*.pyi"

allow_redefinition = true
check_untyped_defs = true
warn_redundant_casts = true
show_error_context = true
show_column_numbers = true

warn_unused_ignores = false
warn_no_return = false
